# Duplo

./: .clang-format  .editorconfig  .gitattributes  .gitignore  ArgumentParser.cpp  ArgumentParser.h  CMakeLists.txt  CstyleCommentsFilter.h  CstyleUtils.cpp  CstyleUtils.h  Docker.md  Dockerfile  Duplo.cpp  Duplo.h  Duplo.vcxproj  FileType.cpp  FileType.h  FileTypeBase.cpp  FileTypeBase.h  FileTypeFactory.cpp  FileType_C.cpp  FileType_C.h  FileType_CS.cpp  FileType_CS.h  FileType_H.cpp  FileType_H.h  FileType_Unknown.cpp  FileType_Unknown.h  FileType_VB.cpp  FileType_VB.h  Fwd.h  HashUtil.cpp  HashUtil.h  IFileType.h  ILineFilter.h  Main.cpp  Makefile  NoopLineFilter.h  Options.h  README  (+18 more)
.github/workflows/: ccpp.yml
.theia/: settings.json
src/: ArgumentParser.cpp  ConsoleExporter.cpp  CstyleCommentsFilter.cpp  CstyleUtils.cpp  Duplo.cpp  Duplo.h  FileExporter.cpp  FileSystem.cpp  FileTypeBase.cpp  FileTypeFactory.cpp  FileType_Ada.cpp  FileType_C.cpp  FileType_CS.cpp  FileType_Erlang.cpp  FileType_Java.cpp  FileType_S.cpp  FileType_Sas.cpp  FileType_Unknown.cpp  FileType_VB.cpp  HashUtil.cpp  IExporter.cpp  JsonExporter.cpp  Main.cpp  NoopLineFilter.cpp  Options.cpp  ProcessResult.cpp  SasStyleCommentsFilter.cpp  SourceFile.cpp  SourceFile.h  SourceLine.cpp  StringUtil.cpp  TextFile.cpp  XmlExporter.cpp  compile_flags.txt
src/include/: ArgumentParser.h  Block.h  ConsoleExporter.h  CstyleCommentsFilter.h  Duplo.h  FileExporter.h  FileTypeBase.h  FileTypeFactory.h  FileType_Ada.h  FileType_CS.h  FileType_Erlang.h  FileType_Java.h  FileType_S.h  FileType_Sas.h  Fwd.h  HashUtil.h  IExporter.h  IFileType.h  ILineFilter.h  JsonExporter.h  NoopLineFilter.h  Options.h  ProcessResult.h  SasStyleCommentsFilter.h  SourceFile.h  SourceLine.h  TextFile.h  Utils.h  XmlExporter.h
tests/: test.bats
tests/Quake2/: files.lst  tests.bats
tests/Simple/: LineNumbers.c  LineNumbers.lst  test-json.bats  test-xml.bats  tests.bats
tests/Simple_Ada/: simple_log.adb  simple_log.lst  tests.bats
tests/Simple_Erlang/: simple_logger.erl  simple_logger.lst  tests.bats
